--- a/src/style.scss
+++ b/src/style.scss
@@ -5,7 +5,7 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-create-block-price-table {
+ .wp-block-create-block-price-table {
 	background-color: #21759b;
 	color: #fff;
 	padding: 2px;
@@ -32,5 +32,13 @@
 	};
 	.price-table-header{
 		padding: 1px;
+	};
+	.block-editor-block-list__block{
+		display: flex;
+		justify-content: center;
 	}
+}
+.parent{
+	display: inline-flex;
+    padding: 5px;
 }
